# linkover

./: .gitignore  README.md  install.sh  linkover.desktop  pyproject.toml
linkover/: __main__.py  api.py  client.py  config.py  tray.py  tray_linux.py  tray_mac.py
